@@ -16,6 +16,8 @@ import org.opensearch.cluster.metadata.IndexMetadata;
 import org.opensearch.common.lucene.Lucene;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.index.IndexSettings;
+import org.opensearch.index.mapper.DocumentMapperForType;
+import org.opensearch.index.mapper.MapperService;
 import org.opensearch.index.seqno.SequenceNumbers;
 import org.opensearch.index.store.Store;
 import org.opensearch.index.translog.Translog;
@@ -24,32 +26,41 @@ import org.opensearch.indices.replication.common.ReplicationType;
 import org.opensearch.test.IndexSettingsModule;
 
 import java.io.IOException;
-import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 
+import static org.awaitility.Awaitility.await;
+
 /**
- * To run this test in IDE, need to add TESTCONTAINERS_RYUK_DISABLED=true in Environment Variables
- * and -Djava.security.manager=allow to VM options
+ *
  */
 public class IngestionEngineTests extends EngineTestCase {
-    static final String topicName = "test";
 
     private IndexSettings indexSettings;
     private Store ingestionEngineStore;
     private IngestionEngine ingestionEngine;
-
-    public String bootstrapServers;
+    // the messages of the stream to ingest from
+    private List<byte[]> messages;
 
     @Override
     @Before
     public void setUp() throws Exception {
-        System.setProperty("TESTCONTAINERS_RYUK_DISABLED", "true");
         indexSettings = newIndexSettings();
         super.setUp();
         final AtomicLong globalCheckpoint = new AtomicLong(SequenceNumbers.NO_OPS_PERFORMED);
         ingestionEngineStore = createStore(indexSettings, newDirectory());
+        // create some initial messages
+        messages = new ArrayList<>();
+        publishData("{\"name\":\"bob\", \"age\": 24}");
+        publishData("{\"name\":\"alice\", \"age\": 20}");
         ingestionEngine = buildIngestionEngine(globalCheckpoint, ingestionEngineStore, indexSettings);
+    }
+
+    private void publishData(String message) {
+        messages.add(message.getBytes());
     }
 
     protected IndexSettings newIndexSettings() {
@@ -57,7 +68,8 @@ public class IngestionEngineTests extends EngineTestCase {
             "index",
             Settings.builder()
                 .put(IndexMetadata.SETTING_REPLICATION_TYPE, ReplicationType.SEGMENT)
-                .put("bootstrap.servers", bootstrapServers)
+                .put(IndexMetadata.SETTING_INGESTION_SOURCE_TYPE, "fake")
+                .put(IndexMetadata.SETTING_INGESTION_SOURCE_POINTER_INIT_RESET, "earliest")
                 .build()
         );
     }
@@ -75,17 +87,27 @@ public class IngestionEngineTests extends EngineTestCase {
     }
 
     public void testCreateEngine() throws IOException {
+        await()
+            .atMost(3, TimeUnit.SECONDS)
+            .untilAsserted(
+                () -> {
+                    Assert.assertTrue(resultsFound(ingestionEngine));
+                });
         // flush
         ingestionEngine.flush(false, true);
         Map<String, String> commitData = ingestionEngine.commitDataAsMap();
         Assert.assertEquals(1, commitData.size());
-        Assert.assertEquals("3", commitData.get(StreamPoller.BATCH_START));
+        Assert.assertEquals("2", commitData.get(StreamPoller.BATCH_START));
     }
 
     private IngestionEngine buildIngestionEngine(AtomicLong globalCheckpoint, Store store, IndexSettings settings) throws IOException {
+        IngestionEngineUtils.FakeIngestionConsumerFactory consumerFactory = new IngestionEngineUtils.FakeIngestionConsumerFactory(messages);
+        EngineConfig engineConfig = config(settings, store, createTempDir(), NoMergePolicy.INSTANCE, null, null, globalCheckpoint::get);
+        // overwrite the config with ingestion engine settings
+        String mapping = "{\"properties\":{\"name\":{\"type\": \"text\"},\"age\":{\"type\": \"integer\"}}}}";
+        MapperService mapperService = createMapperService(mapping);
         Lucene.cleanLuceneIndex(store.directory());
-        final Path translogDir = createTempDir();
-        final EngineConfig engineConfig = config(settings, store, translogDir, NoMergePolicy.INSTANCE, null, null, globalCheckpoint::get);
+        engineConfig = config(engineConfig, () -> new DocumentMapperForType(mapperService.documentMapper(), null), consumerFactory);
         if (!Lucene.indexExists(store.directory())) {
             store.createEmpty(engineConfig.getIndexSettings().getIndexVersionCreated().luceneVersion);
             final String translogUuid = Translog.createEmptyTranslog(
@@ -102,7 +124,11 @@ public class IngestionEngineTests extends EngineTestCase {
     private boolean resultsFound(Engine engine) {
         engine.refresh("index");
         try (Engine.Searcher searcher = engine.acquireSearcher("index")) {
-            return searcher.getIndexReader().numDocs() == 3;
+            return searcher.getIndexReader().numDocs() == 2;
         }
     }
+
+
+
+
 }
